docs/tests/nameres/control_flow/valid/Break.src
// Valid 

fn void main() {
    break;
}