docs/tests/nameres/control_flow/invalid/SwitchNoExpr.src
// Invalid 

fn void main() {
    swtich () {
        case 1 {

        } 
        default {
            
        }
    }
}